--- a/index.html
+++ b/index.html
@@ -1,92 +1,39 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
-<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Berfinkaya</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
+    <meta charset="utf-8" />
+    <title>Berfin ve Berkay</title>
+    <link href="css/jquery.galereya.css" rel="stylesheet"/>
+	<link href="css/style.min.css" rel="stylesheet" />
+	<link href="css/mb-comingsoon.min.css" rel="stylesheet" />
+    <!--[if lt IE 9]>
+    <link rel="stylesheet" href="css/jquery.galereya.ie.css">
+    <![endif]-->
+	<script src="js/jquery.1.9.1.min.js"></script>
+    <script src="js/jquery.galereya.min.js"></script>
+	<script src="js/jquery.mb-comingsoon.min.js"></script> 
+    <script>
+	var datajson = JSON.parse('[{"lowsrc":"upload\/6200_1193507365505_5131364_n.jpg","fullsrc":"upload\/6200_1193507365505_5131364_n.jpg", "description":".."},{"lowsrc":"upload\/17348_307283060667_6863873_n.jpg","fullsrc":"upload\/17348_307283060667_6863873_n.jpg", "description":".."},{"lowsrc":"upload\/26052_384699515667_5758912_n.jpg","fullsrc":"upload\/26052_384699515667_5758912_n.jpg", "description":".."},{"lowsrc":"upload\/61184_428986335667_2824833_n.jpg","fullsrc":"upload\/61184_428986335667_2824833_n.jpg", "description":".."},{"lowsrc":"upload\/64405_10151825005465668_1462002274_n.jpg","fullsrc":"upload\/64405_10151825005465668_1462002274_n.jpg", "description":".."},{"lowsrc":"upload\/66068_434962340667_6755445_n.jpg","fullsrc":"upload\/66068_434962340667_6755445_n.jpg", "description":".."},{"lowsrc":"upload\/67331_434959725667_795063_n.jpg","fullsrc":"upload\/67331_434959725667_795063_n.jpg", "description":".."},{"lowsrc":"upload\/68054_434960495667_6492149_n.jpg","fullsrc":"upload\/68054_434960495667_6492149_n.jpg", "description":".."},{"lowsrc":"upload\/68192_434959680667_5886258_n.jpg","fullsrc":"upload\/68192_434959680667_5886258_n.jpg", "description":".."},{"lowsrc":"upload\/68564_434957555667_6861124_n.jpg","fullsrc":"upload\/68564_434957555667_6861124_n.jpg", "description":".."},{"lowsrc":"upload\/69310_434957800667_1701765_n.jpg","fullsrc":"upload\/69310_434957800667_1701765_n.jpg", "description":".."},{"lowsrc":"upload\/69387_434959550667_7983843_n.jpg","fullsrc":"upload\/69387_434959550667_7983843_n.jpg", "description":".."},{"lowsrc":"upload\/2014-03-08 13.10.23.jpg","fullsrc":"upload\/2014-03-08 13.10.23.jpg", "description":".."},{"lowsrc":"upload\/163615_10150154856576982_6953203_n.jpg","fullsrc":"upload\/163615_10150154856576982_6953203_n.jpg", "description":".."},{"lowsrc":"upload\/166359_10150154457346982_935568_n.jpg","fullsrc":"upload\/166359_10150154457346982_935568_n.jpg", "description":".."},{"lowsrc":"upload\/167462_10150154448206982_1477136_n.jpg","fullsrc":"upload\/167462_10150154448206982_1477136_n.jpg", "description":".."},{"lowsrc":"upload\/215615_10150273999931982_2480477_n.jpg","fullsrc":"upload\/215615_10150273999931982_2480477_n.jpg", "description":".."},{"lowsrc":"upload\/224748_10150289555126982_5498222_n.jpg","fullsrc":"upload\/224748_10150289555126982_5498222_n.jpg", "description":".."},{"lowsrc":"upload\/264104_10150360092396982_2995613_n.jpg","fullsrc":"upload\/264104_10150360092396982_2995613_n.jpg", "description":".."},{"lowsrc":"upload\/320630_10150468585731982_2015719207_n.jpg","fullsrc":"upload\/320630_10150468585731982_2015719207_n.jpg", "description":".."},{"lowsrc":"upload\/941894_10151714169495668_1416787960_n.jpg","fullsrc":"upload\/941894_10151714169495668_1416787960_n.jpg", "description":".."},{"lowsrc":"upload\/942103_4715334455777_685816893_n.jpg","fullsrc":"upload\/942103_4715334455777_685816893_n.jpg", "description":".."},{"lowsrc":"upload\/969996_10151825008295668_54488153_n.jpg","fullsrc":"upload\/969996_10151825008295668_54488153_n.jpg", "description":".."},{"lowsrc":"upload\/1003486_10151825006525668_1505219563_n.jpg","fullsrc":"upload\/1003486_10151825006525668_1505219563_n.jpg", "description":".."},{"lowsrc":"upload\/1003839_10151825000420668_1839879489_n.jpg","fullsrc":"upload\/1003839_10151825000420668_1839879489_n.jpg", "description":".."},{"lowsrc":"upload\/1012017_10151824996190668_403208998_n.jpg","fullsrc":"upload\/1012017_10151824996190668_403208998_n.jpg", "description":".."},{"lowsrc":"upload\/1016218_10152013391611982_1255689909_n.jpg","fullsrc":"upload\/1016218_10152013391611982_1255689909_n.jpg", "description":".."},{"lowsrc":"upload\/1069242_10151824998750668_1834919713_n.jpg","fullsrc":"upload\/1069242_10151824998750668_1834919713_n.jpg", "description":".."},{"lowsrc":"upload\/1377142_10152002964026882_1850291819_n.jpg","fullsrc":"upload\/1377142_10152002964026882_1850291819_n.jpg", "description":".."},{"lowsrc":"upload\/1465185_10152034828680668_1993741981_n.jpg","fullsrc":"upload\/1465185_10152034828680668_1993741981_n.jpg", "description":".."}]');
+        $(function() {
+            $('#galleryherepls').galereya({
+                load: function(next) {
+					next(datajson);
+                }
+            });
+        });
+		 $(function () {
+            var $section = $('section');
+            $(window).on("resize", function () {
+                var dif = Math.max($(window).height() - $section.height(), 0);
+                var padding = Math.floor(dif / 2) + 'px';
+                $section.css({ 'padding-top': padding, 'padding-bottom': padding });
+            }).trigger("resize");
+            $('#myCounter').mbComingsoon(new Date(2014, 7, 8, 21, 0));
+            setTimeout(function () {
+                $(window).resize();
+            }, 200);
+        });
+    </script>
 </head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Berfinkaya</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/burcuozcelik/berfinkaya/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/burcuozcelik/berfinkaya/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/burcuozcelik/berfinkaya" class="code">View Berfinkaya on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/burcuozcelik" class="avatar"><img src="https://avatars1.githubusercontent.com/u/6830517?s=60" width="48" height="48"/></a> <a href="https://github.com/burcuozcelik">burcuozcelik</a> maintains <a href="https://github.com/burcuozcelik/berfinkaya">Berfinkaya</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/burcuozcelik/berfinkaya/tarball/master" class="tar">tar</a><a href="https://github.com/burcuozcelik/berfinkaya/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
+<body style="background-color:#DFCFBE">
+<div class="row centered text-center" id="myCounter"></div>
+    <div id="galleryherepls"></div>
 </body>
-</html>
