--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8" />
-    <title>Berfin ve Berkay</title>
+    <title>Berfin Kaya</title>
     <link href="css/jquery.galereya.css" rel="stylesheet"/>
 	<link href="css/style.min.css" rel="stylesheet" />
 	<link href="css/mb-comingsoon.min.css" rel="stylesheet" />
