mezitli + basar2 resim eklendi

--- a/index.html
+++ b/index.html
@@ -478,6 +478,9 @@
 							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/09a.jpg" alt="">
                             <img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/RTT.jpg" alt="">
 							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/vvvvv.jpg" alt="">
+							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/d21.jpg" alt="">
+							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/d21b.jpg" alt="">
+							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/d21c.jpg" alt="">
                             <p></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>  Projeyİ Kapat</button>
                         </div>
@@ -532,6 +535,12 @@
                             <h2>Başar 2 Apartmanı</h2>
                             <p class="item-intro text-muted">Mersin / Tarsus</p>
                             <img class="img-responsive img-centered" src="images/RCmimar/tarsus-basar2-apt/1.jpg" alt="">
+                            <img class="img-responsive img-centered" src="images/RCmimar/tarsus-basar2-apt/r1.jpg" alt="">
+                            <img class="img-responsive img-centered" src="images/RCmimar/tarsus-basar2-apt/r2.jpg" alt="">
+                            <img class="img-responsive img-centered" src="images/RCmimar/tarsus-basar2-apt/r3.jpg" alt="">
+                            <img class="img-responsive img-centered" src="images/RCmimar/tarsus-basar2-apt/r4.jpg" alt="">
+                            <img class="img-responsive img-centered" src="images/RCmimar/tarsus-basar2-apt/5.jpg" alt="">
+                            <img class="img-responsive img-centered" src="images/RCmimar/tarsus-basar2-apt/6.jpg" alt="">
                             <p></p>
                             <p></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>  Projeyİ Kapat</button>
