mezitli 2+1 evler eklendi

--- a/index.html
+++ b/index.html
@@ -305,6 +305,20 @@
                         <p class="text-muted">Mersin / Tarsus</p>
                     </div>
                 </div>
+				<div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="images/RCmimar/mersin-mezitli-akdenizcity/thumb.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Akdeniz City - 2+1 Evler</h4>
+                        <p class="text-muted">Mersin / Mezitli</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -478,9 +492,6 @@
 							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/09a.jpg" alt="">
                             <img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/RTT.jpg" alt="">
 							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/vvvvv.jpg" alt="">
-							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/d21.jpg" alt="">
-							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/d21b.jpg" alt="">
-							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdeniz-sitesi/d21c.jpg" alt="">
                             <p></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>  Projeyİ Kapat</button>
                         </div>
@@ -677,6 +688,32 @@
                             <img class="img-responsive img-centered" src="images/RCmimar/tarsus-barbaros-eczanesi/1.jpg" alt="">
                             <img class="img-responsive img-centered" src="images/RCmimar/tarsus-barbaros-eczanesi/3.jpg" alt="">
                             <img class="img-responsive img-centered" src="images/RCmimar/tarsus-barbaros-eczanesi/4.jpg" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>  Projeyİ Kapat</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	 <!-- Portfolio Modal 9 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Akdenİz City 2+1 Evler</h2>
+                            <p class="item-intro text-muted">Mersin / Mezitli</p>							
+							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdenizcity/d21.jpg" alt="">
+							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdenizcity/d21b.jpg" alt="">
+							<img class="img-responsive" src="images/RCmimar/mersin-mezitli-akdenizcity/d21c.jpg" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>  Projeyİ Kapat</button>
                         </div>
                     </div>
